--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Merriweather', serif;
   line-height: 1.6;
+  font-feature-settings: "ss02";
   font-size: 18px;
 }
 
