--- a/styles/global.css
+++ b/styles/global.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
   line-height: 1.6;
   font-feature-settings: "ss02";
   font-size: 18px;
@@ -26,4 +26,14 @@ a:hover {
 img {
   max-width: 100%;
   display: block;
+}
+
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+}
+blockquote p {
+  display: inline;
 }
