--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import "highlight.js/styles/zenburn.css";
+@import "https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css";
 
 html,
 body {
@@ -39,6 +40,7 @@ blockquote p {
   display: inline;
 }
 
+pre,
 code {
   border-radius: 5px;
   font-size: 90%;
@@ -46,30 +48,9 @@ code {
   font-variant-ligatures: none;
 }
 
-code:not(.hljs) {
-  border-radius: 5px;
+code {
   color: #1f1f3f;
   background: #dcdcdc;
   max-width: 100%;
   padding: 0.1em 0.25em;
-}
-
-/* adds some italics */
-.hljs-keyword,
-.hljs-built_in,
-.hljs-title,
-.hljs-comment,
-.hljs-quote,
-.hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-addition,
-.hljs-deletion {
-  font-style: italic;
-}
-
-.hljs-selector-class,
-.hljs-link,
-.hljs-string {
-  font-weight: bold;
 }
