--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import "highlight.js/styles/zenburn.css";
+@import "https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css";
 
 html,
 body {
