--- a/styles/global.scss
+++ b/styles/global.scss
@@ -8,3 +8,8 @@ pre {
     margin: -1rem -1.4rem;
   }
 }
+
+:root {
+  --nc-font-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
+    "Courier New", monospace;
+}
