better monospace font

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -3,3 +3,9 @@
     --nc-font-sans: "Inter var", sans-serif;
   }
 }
+
+:root {
+  --nc-font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+}
