--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,9 +1,6 @@
 :root {
-  --nc-font-sans: "Inter var", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --nc-font-mono: ui-monospace, Consolas, monaco, "Ubuntu Mono",
-    "Liberation Mono", "Courier New", Courier, monospace;
+  --nc-font-sans: "Inter var", sans-serif;
+  --nc-font-mono: Consolas, Monaco, monospace;
 
   /* Light theme */
   --nc-tx-1: #000000;
