--- a/styles/global.css
+++ b/styles/global.css
@@ -91,13 +91,11 @@ button {
 }
 
 body {
-  /* Center body in page */
-  margin: 0 auto;
-  max-width: 750px;
+  max-width: 760px;
   padding: 2rem;
   border-radius: 6px;
   overflow-x: hidden;
-  word-break: break-word;
+  hyphens: auto;
   overflow-wrap: break-word;
   background: var(--nc-bg-1);
 
@@ -283,6 +281,7 @@ kbd,
 samp {
   /* Set the font family for monospaced elements */
   font-family: var(--nc-font-mono);
+  hyphens: none;
 }
 
 code,
