--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,10 +5,10 @@ import "./styles/cascadia.css";
 
 export interface Props {
   title: string;
-  extraLinks?: HTMLLinkElement[];
+  meta?: Record<string, string>;
 }
 
-const { title, extraLinks = [] } = Astro.props;
+const { title, meta = {} } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -18,7 +18,11 @@ const { title, extraLinks = [] } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
-    {extraLinks}
+    {
+      Object.entries(meta).map(([name, content]) => (
+        <meta name={name} content={content} />
+      ))
+    }
     <title>{title}</title>
   </head>
   <body>
