--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from "./Layout.astro";
 
-const { frontmatter: meta } = Astro.props;
+const { frontmatter } = Astro.props;
+
+const { file, url, ...meta } = frontmatter;
 ---
 
-<Layout title={meta.title}>
+<Layout title={meta.title} meta={meta}>
   <slot />
 </Layout>
