--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,10 @@ const posts = await Astro.glob("../pages/posts/*.md");
     <ul>
       {
         posts
-          .sort((a, b) => (a.frontmatter.date < b.frontmatter.date ? 1 : -1))
-          .map(({ url, frontmatter: meta }) => (
+          .sort((a, b) =>
+            a.frontmatter.meta.date < b.frontmatter.meta.date ? 1 : -1
+          )
+          .map(({ url, frontmatter: { meta } }) => (
             <li>
               <a href={url}>{meta.title}</a>
               {meta.description && <p>{meta.description}</p>}
