uses, move blog to content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,16 @@
 ---
+import { getCollection } from "astro:content";
 import Layout from "../layouts/Layout.astro";
 
-const posts = await Astro.glob("../pages/posts/*.md");
+const entries = await getCollection("posts");
 ---
 
-<Layout title="Ricardo Busquet">
+<Layout
+  title="Ricardo Busquet"
+  meta={{
+    description: "Ricardo Busquet's website",
+  }}
+>
   <main>
     <h2>Hello, I'm Ricardo! 👋</h2>
     <p>Nice to meet you!</p>
@@ -23,13 +29,11 @@ const posts = await Astro.glob("../pages/posts/*.md");
 
     <ul>
       {
-        posts
-          .sort((a, b) =>
-            a.frontmatter.meta.date < b.frontmatter.meta.date ? 1 : -1
-          )
-          .map(({ url, frontmatter: { meta } }) => (
+        entries
+          .sort((a, b) => (a.data.meta.date < b.data.meta.date ? 1 : -1))
+          .map(({ slug, data: { meta } }) => (
             <li>
-              <a href={url}>{meta.title}</a>
+              <a href={`/posts/${slug}`}>{meta.title}</a>
               {meta.description && <p>{meta.description}</p>}
             </li>
           ))
