--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,14 +5,15 @@ import "./styles/cascadia.css";
 
 export interface Props {
   title: string;
-  meta?: Record<string, string>;
+  meta?: Record<string, unknown>;
+  lang?: string;
 }
 
-const { title, meta = {} } = Astro.props;
+const { title, meta = {}, lang = "en" } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang={lang}>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -20,7 +21,7 @@ const { title, meta = {} } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     {
       Object.entries(meta).map(([name, content]) => (
-        <meta name={name} content={content} />
+        <meta name={name} content={String(content)} />
       ))
     }
     <title>{title}</title>
@@ -38,6 +39,8 @@ const { title, meta = {} } = Astro.props;
             <a rel="me" href="https://bolha.us/@rbusquet"> Mastodon</a>
             {" · "}
             <a rel="me" href="https://twitter.com/@ricbusquet"> Twitter</a>
+            {" · "}
+            <a href="/uses">Uses</a>
           </span>
         </nav>
       </div>
