more css adjustments

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,13 +15,13 @@ const entries = await getCollection("posts");
     <h2>Hello, I'm Ricardo! 👋</h2>
     <p>Nice to meet you!</p>
     <p>
-      As a software engineer based in New York, I bring my skills and experience
-      to the forefront of technology. Originally from Brazil, I am active on
-      social media and can be found on
+      I'm a software engineer based in New York. Originally from Brazil, I've
+      been living in the US since 2018. I am active on social media and can be
+      found on
       <a rel="me" href="https://twitter.com/ricbusquet"> Twitter</a>,
       <a rel="me" href="https://bolha.us/@rbusquet"> Mastodon</a>, and <a
         href="https://github.com/rbusquet">GitHub</a
-      >.
+      >. Happy to connect!
     </p>
   </main>
   <aside>
